<resources>
    <string name="app_name">AdminAttendanceApp</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Add Student</string>
    <string name="nav_photos">Add Courses</string>
    <string name="nav_movies">Add Teacher</string>
    <string name="nav_notifications">View Attendance</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_department">Add Department Details</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Add Department Detail</item>
        <item>All Courses Detail</item>
        <item>Add Student Detail</item>
        <item>All Teacher Detail</item>
<!--        <item>View Attendance Detail</item>-->
        <item>Add TimeTable Details</item>
        <item>Add Fees Details</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="time_table">Time Table</string>
    <string name="pay_fees">Pay Fees</string>

</resources>
