<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_department" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_movies" />

<!--        <item-->
<!--            android:id="@+id/nav_notifications"-->
<!--            android:icon="@drawable/ic_notifications_black_24dp"-->
<!--            android:title="@string/nav_notifications" />-->



        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/time_table" />

<!--        <item-->
<!--            android:id="@+id/nav_pay_fees"-->
<!--            android:icon="@drawable/ic_add_circle_black_24dp"-->
<!--            android:title="@string/pay_fees" />-->


    </group>


</menu>